--- a/myp/src/main/resources/application.properties
+++ b/myp/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-#톰켓 포트
+#í°ì¼ í¬í¸
 server.port=8089
  
 #db connection(Oracle)
@@ -7,19 +7,21 @@ server.port=8089
 #spring.datasource.username=c##scott
 #spring.datasource.password=tiger
 
-# 로그4j에 sql 출력시 사용
+# ë¡ê·¸4jì sql ì¶ë ¥ì ì¬ì©
 spring.datasource.driver-class-name=net.sf.log4jdbc.sql.jdbcapi.DriverSpy
 spring.datasource.url=jdbc:log4jdbc:oracle:thin:@localhost:1521/orcl
 spring.datasource.username=c##scott
 spring.datasource.password=tiger
  
-# VO 사용시 vo경로를 풀로 다 적지 않고 아래 경로로 잡아줄때 사용한다.
+# VO ì¬ì©ì voê²½ë¡ë¥¼ íë¡ ë¤ ì ì§ ìê³  ìë ê²½ë¡ë¡ ì¡ìì¤ë ì¬ì©íë¤.
 #mybatis.type-aliases-package=com.devandy.web.vo  
 
-# sql 위치 지정  , SqlSessionFactory 생성시 MypApplication.java 파일에 해도 되고 여기에 해도 된다.
+# sql ìì¹ ì§ì   , SqlSessionFactory ìì±ì MypApplication.java íì¼ì í´ë ëê³  ì¬ê¸°ì í´ë ëë¤.
 mybatis.mapper-locations: mapper/**/*.xml
 
-#web루트 경로와 jsp프리픽스 설정. 
+#webë£¨í¸ ê²½ë¡ì jspíë¦¬í½ì¤ ì¤ì . 
 spring.mvc.view.prefix=/WEB-INF/views/
 spring.mvc.view.suffix=.jsp
 
+# jsp 파일 was 안내려도 반영 되게 .
+server.servlet.jsp.init-parameters.development=true
