--- a/myp/src/main/resources/application.properties
+++ b/myp/src/main/resources/application.properties
@@ -25,3 +25,11 @@ spring.mvc.view.suffix=.jsp
 
 # jsp 파일 was 안내려도 반영 되게 .
 server.servlet.jsp.init-parameters.development=true
+
+
+
+#spring.mvc.cors.allowed-origins=*
+#spring.mvc.cors.allowed-methods=GET,POST,PUT,DELETE,OPTIONS
+#spring.mvc.cors.allowed-headers=*
+#spring.mvc.cors.allow-credentials=false
+#spring.mvc.cors.max-age=3600
