--- a/myp/src/main/webapp/vue3_pjt/vue3/package.json
+++ b/myp/src/main/webapp/vue3_pjt/vue3/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^1.7.2",
+    "mitt": "^3.0.1",
     "vue": "^3.4.21",
     "vue-router": "^4.3.2",
     "vuex": "^4.1.0"
