--- a/myp/src/main/resources/application.properties
+++ b/myp/src/main/resources/application.properties
@@ -19,6 +19,9 @@ spring.datasource.password=tiger
 # sql ìì¹ ì§ì   , SqlSessionFactory ìì±ì MypApplication.java íì¼ì í´ë ëê³  ì¬ê¸°ì í´ë ëë¤.
 mybatis.mapper-locations: mapper/**/*.xml
 
+# 파라미터로 널값이나 SQL에서 파라미터에 없는 컬럼을 적었을때 기보을 NULL로 셋팅하여 부적합한유형 에러 안나게 설정. 
+mybatis.configuration.jdbcTypeForNull=NULL
+
 #webë£¨í¸ ê²½ë¡ì jspíë¦¬í½ì¤ ì¤ì . 
 spring.mvc.view.prefix=/WEB-INF/views/
 spring.mvc.view.suffix=.jsp
